--- a/application/app/view/sitemap/aboutUs.html
+++ b/application/app/view/sitemap/aboutUs.html
@@ -7,7 +7,7 @@
                 <li>
                     <a href="/app/Index/index">首页</a>
                 </li>
-                  <li><a href="#" class="active">关于我们</a></li>
+                <li class="active">{$data.programaCname}</li>
             </ul>
         </div>
 <div class="container">
