--- a/application/template4/view/index/index.html
+++ b/application/template4/view/index/index.html
@@ -220,7 +220,7 @@
 					{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
 							{if $kkk == 0}
 					<div class="recruit_body_img">
-						<a href="/template4/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}">
+						<a href="/template4/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}" target="_blank">
 							<img src="{$vvv.cover_path}">
 							<span>{$vvv.title}</span>
 						</a>
@@ -273,7 +273,7 @@
 					{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
 							{if $kkk == 0}
 					<div class="recruit_body_img">
-						<a href="/template4/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}">
+						<a href="/template4/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}" target="_blank">
 							<img src="{$vvv.cover_path}">
 							<span>{$vvv.title}</span>
 						</a>
