--- a/application/template6/view/index/index.html
+++ b/application/template6/view/index/index.html
@@ -63,7 +63,7 @@
 	<div class="row magTop20">
 		<div class="col-md-8 tit">
 			<div class="col-md-6 oneBox">
-				<h4>[招生资讯] <a href="/template6/Message/message?type=7">more<sup>+</sup></a></h4>
+				<h4>[招生资讯] <a href="/template6/Message/message?type=7" target="_blank">more<sup>+</sup></a></h4>
 				{if $data.recruitData}
 				{foreach name="data.recruitData" item="v" key="k"}
 				{if condition="($k == 0)"}
@@ -84,7 +84,7 @@
 				{/if}
 			</div>
 			<div class="col-md-6 oneBox">
-				<h4>[考试资讯] <a href="/template6/Message/message?type=8">more<sup>+</sup></a></h4>
+				<h4>[考试资讯] <a href="/template6/Message/message?type=8" target="_blank">more<sup>+</sup></a></h4>
 				{if $data.examData}
 				{foreach name="data.examData" item="v" key="k"}
 				{if condition="($k == 0)"}
