--- a/application/template3/view/index/index.html
+++ b/application/template3/view/index/index.html
@@ -90,7 +90,7 @@
 				<h3>资讯</h3>
 			</div>
 			<div class="col-md-6 oneBox">
-				<h4>[招生资讯] <a href="/template3/Message/message?type=7">more<sup>+</sup></a></h4>
+				<h4>[招生资讯] <a href="/template3/Message/message?type=7" target="_blank">more<sup>+</sup></a></h4>
 				{if $data.recruitData}
 				{foreach name="data.recruitData" item="v" key="k"}
 				{if condition="($k == 0)"}
@@ -111,7 +111,7 @@
 				{/if}
 			</div>
 			<div class="col-md-6 oneBox">
-				<h4>[考试资讯] <a href="/template3/Message/message?type=8">more<sup>+</sup></a></h4>
+				<h4>[考试资讯] <a href="/template3/Message/message?type=8" target="_blank">more<sup>+</sup></a></h4>
 				{if $data.examData}
 				{foreach name="data.examData" item="v" key="k"}
 				{if condition="($k == 0)"}
@@ -164,7 +164,7 @@
 				<h3>推荐</h3>
 			</div>
 			<div class="col-md-6 oneBox">
-				<h4>[院校推荐] <a href="/template3/Message/message?type=6">more<sup>+</sup></a></h4>
+				<h4>[院校推荐] <a href="/template3/Message/message?type=6" target="_blank">more<sup>+</sup></a></h4>
 				{if $data.recommendData}
 				{foreach name="data.recommendData" item="v" key="k"}
 				{if condition="($k == 0)"}
@@ -185,7 +185,7 @@
 				{/if}
 			</div>
 			<div class="col-md-6 oneBox">
-				<h4>[MBA活动] <a href="/template3/Message/message?type=3">more<sup>+</sup></a></h4>
+				<h4>[MBA活动] <a href="/template3/Message/message?type=3" target="_blank">more<sup>+</sup></a></h4>
 				{if $data.hotData}
 				{foreach name="data.hotData" item="v" key="k"}
 				{if condition="($k == 0)"}
@@ -255,7 +255,7 @@
 		<div class="col-md-3 samebox_new">
 			<div class="col-md-12 tit">
 				<div class="col-md-12 backbgm3 ">
-					<h3>{$vv.cname}<a href="/template3/Message/message?pid={$vv.id}">more<sup>+</sup></a></h3>
+					<h3>{$vv.cname}<a href="/template3/Message/message?pid={$vv.id}" target="_blank">more<sup>+</sup></a></h3>
 				</div>
 				<div class="col-md-12">
 					{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
@@ -306,7 +306,7 @@
 		<div class="col-md-3 samebox_new">
 			<div class="col-md-12 tit">
 				<div class="col-md-12 backbgm3 ">
-					<h3>{$vv.cname}<a href="/template3/Message/message?pid={$vv.id}">more<sup>+</sup></a></h3>
+					<h3>{$vv.cname}<a href="/template3/Message/message?pid={$vv.id}" target="_blank">more<sup>+</sup></a></h3>
 				</div>
 				<div class="col-md-12">
 					{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
