--- a/application/template7/view/index/index.html
+++ b/application/template7/view/index/index.html
@@ -134,7 +134,7 @@
 	<div class="row magTop20">
 		<div class="col-md-8 tit">
 			<div class="col-md-6 oneBox">
-				<h4>[招生资讯] <a href="/template7/Message/message?type=7"><span class="icon"></span>更多</a></h4>
+				<h4>[招生资讯] <a href="/template7/Message/message?type=7" target="_blank"><span class="icon"></span>更多</a></h4>
 				{if $data.recruitData}
 				{foreach name="data.recruitData" item="v" key="k"}
 				{if condition="($k == 0)"}
@@ -155,7 +155,7 @@
 				{/if}
 			</div>
 			<div class="col-md-6 oneBox">
-				<h4>[考试资讯] <a href="/template7/Message/message?type=8"><span class="icon"></span>更多</a></h4>
+				<h4>[考试资讯] <a href="/template7/Message/message?type=8" target="_blank"><span class="icon"></span>更多</a></h4>
 				{if $data.examData}
 				{foreach name="data.examData" item="v" key="k"}
 				{if condition="($k == 0)"}
@@ -227,7 +227,7 @@
 							{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
 									{if $kkk == 0}
 							<div class="recruit_body_img">
-								<a href="/template5/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}">
+								<a href="/template5/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}" target="_blank">
 									<img src="{$vvv.cover_path}">
 									<span>{$vvv.title}</span>
 								</a>
@@ -275,7 +275,7 @@
 					{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
 							{if $kkk == 0}
 					<div class="recruit_body_img">
-						<a href="/template7/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}">
+						<a href="/template7/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}" target="_blank">
 							<img src="{$vvv.cover_path}">
 							<span>{$vvv.title}</span>
 						</a>
