--- a/public/static/index/message/css/message.css
+++ b/public/static/index/message/css/message.css
@@ -1,7 +1,7 @@
 
 .main_topnav{width: 100%;height: 48px;background-color: #f8f8f8;line-height: 32px;box-shadow: 1px 2px 1px #ccc;}
 .main_topnav .mainwd{width: 1250px;margin: 0 auto;min-width: 1250px;}
-.left_aside{width: 870px;padding: 10px;border:1px solid #e3e3e3;margin-top: 20px;}
+.left_aside{width: 850px;padding: 10px;border:1px solid #e3e3e3;margin-top: 20px;min-height: 1038px;}
 .item_bd{margin: 10px 0;}
 .item_list{margin: 10px 0;border-bottom: 1px dashed #ddd;overflow: hidden;padding-bottom: 10px;}
 .item_list .item_list_img img{width: 140px;height:160px;}
