--- a/public/static/index/index/css/index.css
+++ b/public/static/index/index/css/index.css
@@ -35,7 +35,7 @@ h1,h2,h3{
 .oneBox_body_list_access{height: 210px;overflow: hidden;}
 .h16{display: block;width: 100%;height: 16px;font-size: 0;clear: both;}
 .second{width: 100%;}
-.second .secondLeft{width: 100%;overflow: hidden;margin-top: 20px;}
+.second .secondLeft{width: 100%;overflow: hidden;margin-top: 20px;height: 560px;}
 .second .secondLeft .secondLeft_list_img{background: url(/static/images/icon_2.png) no-repeat;color: #fff;
 	width: 80px;height: 93px;text-align: center;font-weight: bold;font-size: 18px;padding-top: 20px;}
 .second .secondLeft .secondLeft_list_img p{line-height: 20px;}
