--- a/application/index/view/layouts/header.html
+++ b/application/index/view/layouts/header.html
@@ -54,7 +54,7 @@
                 <div class="header-index-ad  lt">
                     {if $data.ad_topData}
                     <a href="{$data.ad_topData.img_link}" target="_blank">
-                        <img src="{$data.ad_topData.img_path}" >
+                        <img src="{$data.ad_topData.img_path}" alt="" title="">
                     </a>
                     {/if}
                 </div>
