--- a/application/index/view/layouts/right_aside.html
+++ b/application/index/view/layouts/right_aside.html
@@ -36,7 +36,7 @@
 						<div class="oneBox_top_ad">
 							{if $data.ad_informationData}
 							<a href="{$data.ad_informationData.img_link}" target="_blank">
-							<img src="{$data.ad_informationData.img_path}">
+							<img src="{$data.ad_informationData.img_path}" alt="" title="">
 							</a>
 							{/if}
 						</div>
@@ -89,7 +89,7 @@
 						<div class="oneBox_top_ad">
 							{if $data.ad_academyData}
 							<a href="{$data.ad_academyData.img_link}" target="_blank">
-							<img src="{$data.ad_academyData.img_path}">
+							<img src="{$data.ad_academyData.img_path}" alt="" title="">
 							</a>
 							{/if}
 						</div>
