--- a/application/index/view/layouts/footer.html
+++ b/application/index/view/layouts/footer.html
@@ -4,19 +4,10 @@
   <div class="container ">
             <!-- 底部链接  -->
             <div class="row">
-                    <div class="third_header"></div>
-                    {if $data.blogrollData}
-                    <div class="main_footer_bottom last_span">
-                       <p> 
-                        {foreach name="data.blogrollData" item="v" key="k"}
-                        <a href="{$v.cname_link}" target="_blank">{$v.cname}</a> <span>-</span>
-                        {/foreach}
-                        </p>
-                    </div>
-                    {/if}
+                    <div  style="border: 0.5px solid #e5e5e5;"></div>
                 <!-- 底部链接 -->
                 {if $data.webstatData}
-                        {$data.webstatData.content}
+                    <p>{$data.webstatData.content}</p>
                 {/if}
 
             </div>
