--- a/application/admin/view/programa_article/add.html
+++ b/application/admin/view/programa_article/add.html
@@ -34,6 +34,18 @@
             </div>
           </div>
           <div class="form-group">
+            <label class="col-sm-2 control-label">来源</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="source" placeholder="请输入文章来源" {if condition="($data.sData)"}value="{$data.sData.source}"{/if} >
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">预告时间</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" name="notice_date" placeholder="请输入预告时间" {if condition="($data.sData)"}value="{$data.sData.notice_date}"{/if} >
+            </div>
+          </div>
+          <div class="form-group">
             <label class="col-sm-2 control-label">内容</label>
             <div class="col-sm-10">
             <!-- 加载编辑器的容器 -->
