--- a/application/admin/view/base/search.html
+++ b/application/admin/view/base/search.html
@@ -16,42 +16,45 @@
           </span>
         </div>
       </form> -->
-      <select multiple class="form-control" style="height: 600px;">
-        <option>仪表盘</option>
-        <option>栏目管理 -> 添加栏目</option>
-        <option>栏目管理 -> 栏目列表</option>
-        <option>用户管理 -> 添加用户</option>
-        <option>用户管理 -> 用户列表</option>
-        <option>Banner管理 -> 添加Banner</option>
-        <option>Banner管理 -> Banner列表</option>
-        <option>活动预告管理 -> 添加广告</option>
-        <option>活动预告管理 -> 广告列表</option>
-        <option>院校推荐广告管理 -> 添加广告</option>
-        <option>院校推荐广告管理 -> 广告列表</option>
-        <option>顶部广告管理 -> 添加广告</option>
-        <option>顶部广告管理 -> 广告列表</option>
-        <option>资讯热线广告管理 -> 添加广告</option>
-        <option>资讯热线广告管理 -> 广告列表</option>
-        <option>院校发布广告管理 -> 添加广告</option>
-        <option>院校发布广告管理 -> 广告列表</option>
-        <option>考试资讯广告管理 -> 添加广告</option>
-        <option>考试资讯广告管理 -> 广告列表</option>
-        <option>合作伙伴广告管理 -> 添加广告</option>
-        <option>合作伙伴广告管理 -> 广告列表</option>
-        <option>Logo管理 -> 添加Logo</option>
-        <option>Logo管理 -> Logo列表</option>
-        <option>手机二维码管理 -> 添加二维码</option>
-        <option>手机二维码管理 -> 二维码列表</option>
-        <option>公众号二维码管理 -> 添加二维码</option>
-        <option>公众号二维码管理 -> 二维码列表</option>
-        <option>友情链接管理 -> 添加友情链接</option>
-        <option>友情链接管理 -> 友情链接列表</option>
-        <option>关于我们管理 -> 添加关于我们</option>
-        <option>底部信息管理 -> 添加底部信息</option>
-        <option>站点管理 -> 配置站点</option>
+      <select multiple class="form-control" style="height: 600px;" id="sel" onchange="doSome();">
+        <option value="/admin/Index/index">仪表盘</option>
+        <option value="/admin/Programa/add">栏目管理 -> 添加栏目</option>
+        <option value="/admin/Programa/index">栏目管理 -> 栏目列表</option>
+        <option value="/admin/AdminUser/add">用户管理 -> 添加用户</option>
+        <option value="/admin/AdminUser/index">用户管理 -> 用户列表</option>
+        <option value="/admin/Banner/add">Banner管理 -> 添加Banner</option>
+        <option value="/admin/Banner/index">Banner管理 -> Banner列表</option>
+        <option value="/admin/AdForeshow/add">活动预告管理 -> 添加广告</option>
+        <option value="/admin/AdForeshow/index">活动预告管理 -> 广告列表</option>
+        <option value="/admin/AdAcademy/add">院校推荐广告管理 -> 添加广告</option>
+        <option value="/admin/AdAcademy/index">院校推荐广告管理 -> 广告列表</option>
+        <option value="/admin/AdTop/add">顶部广告管理 -> 添加广告</option>
+        <option value="/admin/AdTop/index">顶部广告管理 -> 广告列表</option>
+        <option value="/admin/AdInformation/add">资讯热线广告管理 -> 添加广告</option>
+        <option value="/admin/AdInformation/index">资讯热线广告管理 -> 广告列表</option>
+        <option value="/admin/AdAcademyTop/add">院校发布广告管理 -> 添加广告</option>
+        <option value="/admin/AdAcademyTop/index">院校发布广告管理 -> 广告列表</option>
+        <option value="/admin/AdExamTop/add">考试资讯广告管理 -> 添加广告</option>
+        <option value="/admin/AdExamTop/index">考试资讯广告管理 -> 广告列表</option>
+        <option value="/admin/AdPartner/add">合作伙伴广告管理 -> 添加广告</option>
+        <option value="/admin/AdPartner/index">合作伙伴广告管理 -> 广告列表</option>
+        <option value="/admin/AdLogo/add">Logo管理 -> 添加Logo</option>
+        <option value="/admin/AdLogo/index">Logo管理 -> Logo列表</option>
+        <option value="/admin/QrCodePhone/add">手机二维码管理 -> 添加二维码</option>
+        <option value="/admin/QrCodePhone/index">手机二维码管理 -> 二维码列表</option>
+        <option value="/admin/QrCodePublic/add">公众号二维码管理 -> 添加二维码</option>
+        <option value="/admin/QrCodePublic/index">公众号二维码管理 -> 二维码列表</option>
+        <option value="/admin/Blogroll/add">友情链接管理 -> 添加友情链接</option>
+        <option value="/admin/Blogroll/index">友情链接管理 -> 友情链接列表</option>
+        <option value="/admin/AboutUs/add">关于我们管理 -> 添加关于我们</option>
+        <option value="/admin/Webstat/add">底部信息管理 -> 添加底部信息</option>
+        <option value="/admin/Website/add">站点管理 -> 配置站点</option>
       </select>
     </div>
   </div>
   <!-- End Page -->
 
 {include file="layouts/footer" /}
+
+<!-- 引入当前页面js -->
+{js href="/static/admin/base/js/search.js" /}
