--- a/public/static/index/sitemap/css/sitemap.css
+++ b/public/static/index/sitemap/css/sitemap.css
@@ -1,6 +1,6 @@
 
 
-.left_aside{width: 870px;padding: 15px;border:1px solid #e3e3e3;margin-top: 20px;}
+.left_aside{width: 850px;padding: 15px;border:1px solid #e3e3e3;margin-top: 20px;height: 1061px;}
 .left_aside h2{border-bottom:2px solid #ccc;padding-bottom: 20px;}
 .map_wrapper{width: 100%;}
 .map_wrapper .map_content{width: 194px;float: left;margin-left: 15px;}
