--- a/public/static/index/layouts/css/layouts.css
+++ b/public/static/index/layouts/css/layouts.css
@@ -20,6 +20,7 @@ body{
 .fs14{font-size: 14px;}
 .pad0{padding: 0;}
 .h10{display: block;width: 100%;height: 10px;clear: both;font-size: 0;}
+.h20{display: block;width: 100%;height: 20px;font-size: 0;clear: both;}
 		/***************头部样式开始  start  *********************/
 .header,.footer{min-width: 1220px;}
 .top-nav-wrapper{width: 100%;background-color: #F7F9FA;height: 40px;line-height: 40px;bottom-bottom:1px solid #ddd; }
@@ -79,3 +80,6 @@ img{width: 100%;height: 100%;}
 /*主体宽度*/
 .container{width: 1250px;margin: 0 auto;}
 div.last_span  span:last-child {display: none;}
+.third_header{width: 100%;height: 48px;border-bottom: 1px solid  #e5e5e5;}
+.third_header h3{float: left;display: inline-block;padding: 9px 0 11px;font-size: 24px;font-weight: 400;
+	border-bottom: 3px solid #1787e0;margin: 0;}
