--- a/application/index/view/layouts/right_aside.html
+++ b/application/index/view/layouts/right_aside.html
@@ -11,7 +11,7 @@
 
 					<div class="oneBox_title">
 						<span class="oneBox_title_bd">招考广告</span>
-						<a href="/Message/message?type=4" class="rt" target="_blank">更多></a>
+						<a href="/zsmore/4.shtml" class="rt" target="_blank">更多></a>
 					</div>
 
 						<div class="oneBox_body">
@@ -52,7 +52,7 @@
 								<img src="{$data.qr_code_phoneData.img_path}" alt="手机站二维码" title="手机站二维码">
 								{/if}
 							</div>
-							
+
 					</div>
 					<div class="h10"></div>
 					<!-- 微信 -->
@@ -74,7 +74,7 @@
 							<span class="oneBox_title_bd">院校推荐</span>
 							<a href="/Message/message?type=6" class="rt" target="_blank">更多></a>
 						</div>
-		
+
 						<div class="oneBox_body">
 							{if $data.recommendData}
 							{foreach name="data.recommendData" item="v" key="k"}
@@ -97,9 +97,9 @@
 					</div>
 			</div>
 		</div>
-		
+
 
 
 	</div>
-		
+
 </div>
